# cli_manager

./: .config_template  README.md  __init__.py  cli_manager.instructions.md  cli_manager.py  init.yaml  pyproject.toml  refresh.py
data/: admin_cli.txt
tests/: __init__.py  test_cli_registry.py
