[project]
name = "cli-manager"
version = "0.0.1"
description = "ADHD Framework manager: cli_manager"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "config-manager",
]

[tool.adhd]
type = "manager"
layer = "runtime"

[tool.uv.sources]
logger-util = { workspace = true }
config-manager = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
